# UniversalNativeWrapper

./: .gitignore  CMakeLists.txt  INFO.XML  LICENSE  MANIFEST.XML  README.md  UniversalNativeWrapper.sln  build.cmd  build.sh  build_x64.cmd  build_x86.cmd
COM/: AddIn.aps  AddIn.cpp  AddIn.def  AddIn.rc  AddIn.rgs  AddInCOM.cpp  AddInCOM.rgs  AddInCOM.vcxproj.filters  AddIn_i.c  AddIn_i.h  AddIn_p.c  MyMemoryManager.cpp  MyMemoryManager.h  dlldatax.c  dllmain.h  stdafx.h
UniversalNativeWrapper/: AddIn.idl  AddInCOM.cpp  AddInCOM.h  AddInCOM.vcxproj  AddIn_i.h  CMakeLists.txt  dllmain.cpp  resource.h  stdafx.cpp
bind/: UniversalNativeWrapper.exp  UniversalNativeWrapper.ilk  UniversalNativeWrapper.lib
src/: AddIn.cpp  AddIn.def  AddIn.idl  AddIn.rc  AddIn.rc.in  AddIn.rgs  AddInCOM.cpp  AddInCOM.h  AddInCOM.rgs  MyMemoryManager.cpp  MyMemoryManager.h  dlldata.c  dlldatax.c  dlldatax.h  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
test/: RunTest32.cmd  RunTest32.vbs  RunTest64.cmd  RunTest64.vbs  RunTestKKT.bsl
